[package]
name = "polars-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
chrono-tz = "0.8.1"
flutter_rust_bridge = { version = "1.60.0", features = ["chrono"] }

[dependencies.polars]
version = "0.26.1"
features = [
  "lazy", "abs", "cum_agg", "product", "describe", "dtype-binary", "json",
  "dtype-u8", "dtype-u16", "dtype-i8", "dtype-i16", "dtype-datetime", "dtype-struct",
  "cross_join", "semi_anti_join", "rolling_window"
]
