[package]
name = "polars-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
chrono-tz = "0.8.1"
flutter_rust_bridge = { version = "2.0.0-dev.18", features = ["chrono"], path = "../../flutter_rust_bridge/frb_rust" }
paste = "1.0.14"

[dependencies.polars]
version = "0.35.4"
default-features = false
features = [
  # default features
  "zip_with", "csv", "temporal", "fmt",
  # additional features
  "lazy", "abs", "cum_agg", "product", "describe", "json", "dtype-datetime",
  "cross_join", "semi_anti_join", "rolling_window", "trigonometry", "round_series",
  "log", "is_in", "strings", "concat_str", "string_to_integer", "lazy_regex"
]
